# change-detection

./: .flake8  .gitignore  Dockerfile  approach_hash.py  approach_hasura.py  docker-compose.yaml  env.sample  pyproject.toml
.devcontainer/: devcontainer.json
hasura/: config.yaml
hasura/metadata/: hasura_metadata_2023_06_15_21_37_51_879.json
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/SOURCE_DB/tables/: dbo_shipment.yaml  tables.yaml
hasura/metadata/databases/source-db/tables/: dbo_customer.yaml  dbo_customer_delta.yaml  dbo_order.yaml  dbo_order_delta.yaml
hasura/migrations/source-db/1687421271776_0001_create_shipment_view/: down.sql  up.sql
sql/destination/: 0001_create_tables.sql
sql/source/: 0001_create_tables.sql  0002_change_log.sql  0003_create_triggers.sql  0004_create_view.sql
utils/: filter_shipment_updates.py  get_shipments.py  update_shipment.py
