[tool.poetry]
name = "change-detection"
version = "0.1.0"
description = ""
packages = []
authors = ["Subhadeep Das <cloud.subhadeepdas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyodbc = "^4.0.39"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
